--- a/Presentation/Areas/Admin/Views/Home/Index.cshtml
+++ b/Presentation/Areas/Admin/Views/Home/Index.cshtml
@@ -11,8 +11,8 @@
                         <i class="material-icons opacity-10">weekend</i>
                     </div>
                     <div class="text-end pt-1">
-                        <p class="text-sm mb-0 text-capitalize">Today's Money</p>
-                        <h4 class="mb-0">$53k</h4>
+                        <p class="text-sm mb-0 text-capitalize">Students</p>
+                        <h4 class="mb-0">530</h4>
                     </div>
                 </div>
                 <hr class="dark horizontal my-0">
@@ -28,8 +28,8 @@
                         <i class="material-icons opacity-10">person</i>
                     </div>
                     <div class="text-end pt-1">
-                        <p class="text-sm mb-0 text-capitalize">Today's Users</p>
-                        <h4 class="mb-0">2,300</h4>
+                        <p class="text-sm mb-0 text-capitalize">Classes</p>
+                        <h4 class="mb-0">30</h4>
                     </div>
                 </div>
                 <hr class="dark horizontal my-0">
@@ -45,8 +45,8 @@
                         <i class="material-icons opacity-10">person</i>
                     </div>
                     <div class="text-end pt-1">
-                        <p class="text-sm mb-0 text-capitalize">New Clients</p>
-                        <h4 class="mb-0">3,462</h4>
+                        <p class="text-sm mb-0 text-capitalize">Proffesors</p>
+                        <h4 class="mb-0">40</h4>
                     </div>
                 </div>
                 <hr class="dark horizontal my-0">
@@ -62,8 +62,8 @@
                         <i class="material-icons opacity-10">weekend</i>
                     </div>
                     <div class="text-end pt-1">
-                        <p class="text-sm mb-0 text-capitalize">Sales</p>
-                        <h4 class="mb-0">$103,430</h4>
+                        <p class="text-sm mb-0 text-capitalize">Proffesors</p>
+                        <h4 class="mb-0">40</h4>
                     </div>
                 </div>
                 <hr class="dark horizontal my-0">
